# esp-flowerpot-irrigation

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.v1board
.github/workflows/: build.yml  codeql-analysis.yml  release.yml
main/: CMakeLists.txt  Kconfig.projbuild  adaptive_range.c  adaptive_range.h  app_config.h  app_main.c  app_status.c
